--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="author" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta http-equiv="pragma" content="no-cache">
-    <meta http-equiv="cache-control" content="no-cache">
-    <meta http-equiv="expires" content="0">
-    <meta name="description" content="">
-    <title>fisx</title>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <meta name="description" content="Description">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <link rel="stylesheet" href="//unpkg.com/docsify/themes/buble.css">
 </head>
 <body>
-    <h1>Hello Fisx!</h1>
+  <div id="app"></div>
 </body>
+<script>
+window.$docsify = {
+    auto2top: true,
+    repo: 'https://github.com/fisx-suite/',
+    name: 'FISX',
+    coverpage: true
+};
+</script>
+<script src="//unpkg.com/docsify/lib/docsify.js"></script>
 </html>
-
